--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -142,7 +142,7 @@
   }
 
   .video-reviews-section h2 {
-    color: var(--dark-green)
+    color: var(--dark-green);
     font-size: 40px;
     margin: 0;
     margin-bottom: 30px;
