--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -7,7 +7,7 @@
         <div class="swiper-slide">
           <div class="video-review">
             <div class="review-video">
-              <iframe src="https://player.vimeo.com/video/662207384?h=d512ec6cd1&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="C - Jo R Testimonial"></iframe>
+              <iframe src="https://player.vimeo.com/video/770733369?h=fd73eeaa72&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="compliant_-_d&#039;gaye_curalin_testimonial (1080p).mp4"></iframe>
             </div>
           
           </div>
@@ -43,8 +43,8 @@
 
 <style>
   .video-reviews-section .container .video-reviews {
-      overflow: visible;
-      max-width: 70%
+      overflow: unset;
+      max-width: unset;
   }
 
   .video-reviews-section .container .video-reviews .swiper-slide .video-review {
