--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -31,7 +31,21 @@
         <div class="swiper-slide">
           <div class="video-review">
             <div class="review-video">
-              <iframe src="https://player.vimeo.com/video/662207384?h=d512ec6cd1&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="C - Jo R Testimonial"></iframe>
+              <iframe src="https://player.vimeo.com/video/672291614?h=d512ec6cd1&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="C - Jo R Testimonial"></iframe>
+            </div>       
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="video-review">
+            <div class="review-video">
+              <iframe src="https://player.vimeo.com/video/672291580?h=d512ec6cd1&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="C - Jo R Testimonial"></iframe>
+            </div>       
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="video-review">
+            <div class="review-video">
+              <iframe src="https://player.vimeo.com/video/672317874?h=d512ec6cd1&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="C - Jo R Testimonial"></iframe>
             </div>       
           </div>
         </div>
