--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -110,7 +110,7 @@
 
 <script>
   videoReviewsSliderAllInOne = new Swiper('.video-reviews-section .swiper', {
-      slidesPerView: 'auto',
+      slidesPerView: '3',
       spaceBetween: 4,
       centeredSlides: true,
       grabCursor: true,
