--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -111,7 +111,7 @@
 <script>
   videoReviewsSliderAllInOne = new Swiper('.video-reviews-section .swiper', {
       slidesPerView: '1',
-      spaceBetween: 8,
+      {% comment %} spaceBetween: 8, {% endcomment %}
       centeredSlides: true,
       grabCursor: true,
       slideToClickedSlide: true,
