--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -125,7 +125,7 @@
 </script>
 
 <script src="https://player.vimeo.com/api/player.js"></script>
-<script>
+{% comment %} <script>
   var player1 = new Vimeo.Player(document.querySelector('#review-video-1'));
   var player2 = new Vimeo.Player(document.querySelector('#review-video-2'));
   var player3 = new Vimeo.Player(document.querySelector('#review-video-3'));
@@ -144,7 +144,7 @@
       })
     });
   });
-</script>
+</script> {% endcomment %}
 
 <style>
   .swiper-button-prev,
