--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -110,8 +110,8 @@
 
 <script>
   videoReviewsSliderAllInOne = new Swiper('.video-reviews-section .swiper', {
-      slidesPerView: '1',
-      {% comment %} spaceBetween: 8, {% endcomment %}
+      slidesPerView: 'auto',
+      spaceBetween: 8, 
       centeredSlides: true,
       grabCursor: true,
       slideToClickedSlide: true,
