--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -63,7 +63,8 @@
 
   .video-reviews-section .container .video-reviews .swiper-slide .video-review {
       display: flex;
-      align-items: center
+      align-items: center;
+      justify-content: center;
   }
 
   .video-reviews-section .container .video-reviews .swiper-slide .video-review .review-video {
