--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -68,9 +68,9 @@
   }
 
   .video-reviews-section .container .video-reviews .swiper-slide .video-review .review-video {
-      width: 40%;
-      margin-left: 10%;
-      height: 500px
+      width: 50%;
+      margin-left: unset;
+      height: unset;
   }
 
   .video-reviews-section .container .video-reviews .swiper-slide .video-review .review-video iframe {
