--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -70,7 +70,7 @@
   .video-reviews-section .container .video-reviews .swiper-slide .video-review .review-video {
       width: 50%;
       margin-left: unset;
-      height: unset;
+      height: 500px
   }
 
   .video-reviews-section .container .video-reviews .swiper-slide .video-review .review-video iframe {
