--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -162,7 +162,7 @@
     color: var(--dark-green);
     font-size: 40px;
     margin: 0;
-    margin-bottom: 30px;
+    margin-bottom: unset;
   }
 
   .video-reviews-section .video-reviews {
