--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -57,7 +57,7 @@
 
 <style>
   .video-reviews-section {
-
+    
   }
   .video-reviews-section .container .video-reviews {
       overflow: unset;
@@ -86,7 +86,9 @@
 
   @media screen and (max-width: 768px) {
 
-
+   .video-reviews-section {
+      background-color: unset;
+  }
 
    .video-reviews-section .container .video-reviews {
       max-width: unset;
