--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -148,6 +148,9 @@
    .swiper-button-next {
       color: gray;
       transition: opacity .5s
+      border: 1px solid white;
+      border-radius: 50%;
+
   }
 
   .thirty-day-video-reviews-section {
