--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -150,6 +150,8 @@
       transition: opacity .5s
       border: 1px solid white;
       border-radius: 50%;
+      min-width: 45px;
+      height: 45px;
 
   }
 
