--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -147,7 +147,7 @@
   .swiper-button-prev,
    .swiper-button-next {
       color: gray;
-      transition: opacity .5s
+      transition: opacity .5s;
       border: 1px solid white;
       border-radius: 50%;
       min-width: 45px;
