--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -148,7 +148,7 @@
    .swiper-button-next {
       color: gray;
       transition: opacity .5s;
-      border: 1px solid white;
+      border: 1px solid gray;
       border-radius: 50%;
       min-width: 45px;
       height: 45px;
