--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -147,12 +147,13 @@
   .swiper-button-prev,
    .swiper-button-next {
       color: gray;
-      font-weight: 700;
       transition: opacity .5s;
+      font-weight: 700;     
       border: 1px solid gray;
       border-radius: 50%;
       min-width: 50px;
       height: 50px;
+      background: white;
 
   }
 
