--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -65,11 +65,13 @@
   }
 
   .thirty-day-video-reviews-section .pink-leaf {
-   
+    position: absolute;
+    top: 200px;
   }
 
   .thirty-day-video-reviews-section .green-leaf {
-   
+   position: absolute;
+   right: 0;
   }
   .thirty-day-video-reviews-section .container .video-reviews {
       overflow: unset;
