--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -72,6 +72,7 @@
   .thirty-day-video-reviews-section .green-leaf {
    position: absolute;
    right: 0;
+   bottom: 10px;
   }
   .thirty-day-video-reviews-section .container .video-reviews {
       overflow: unset;
@@ -96,7 +97,11 @@
   }
 
   @media screen and (max-width: 768px) {
-
+  .thirty-day-video-reviews-section .green-leaf {
+    position: absolute;
+    right: -30px;
+    bottom: -40px;
+  }
    .thirty-day-video-reviews-section .container .video-reviews {
       max-width: unset;
       margin-top: 30px
