--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -78,7 +78,8 @@
   .thirty-day-video-reviews-section .container .video-reviews {
       overflow: unset;
       max-width: unset;
-      
+      padding-bottom: 20px;
+
   }
 
   .thirty-day-video-reviews-section .container .video-reviews .swiper-slide .video-review {
