--- a/snippets/thirty-day-video-reviews.liquid
+++ b/snippets/thirty-day-video-reviews.liquid
@@ -128,7 +128,8 @@
   }
    .thirty-day-video-reviews-section .container .video-reviews {
       max-width: unset;
-      margin-top: 30px
+      margin-top: 30px;
+      padding-bottom: unset;
   }
 
    .thirty-day-video-reviews-section .container .video-reviews .swiper-slide .video-review {
