--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -110,7 +110,7 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
     .timeline ul {
-      background: #D2B48C;
+      background: #555F44
       padding: 50px 0;
     }
 
