--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -72,26 +72,13 @@
 
 <style>
     
-    *,
-    *::before,
-    *::after {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
 
-    body {
-      font: normal 20px/1.5 "Helvetica Neue", sans-serif;
-      background: #D2B48C;
-      color: 	#A0522D;
-      overflow-x: hidden;
-      padding-bottom: 50px;
-    }  /* INTRO SECTION
+ /* INTRO SECTION
     –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
     .intro {
-      background: #FFE4C4;
-      padding: 100px 0;
+      background: #555F44;
+      
     }
 
     .container {
