--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -97,7 +97,7 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
     .timeline ul {
-      background: #555F44
+      background: #555F44;
       padding: 50px 0;
     }
 
