--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -72,14 +72,9 @@
 
 <style>
 
-
-    /* TIMELINE
-    –––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-    .timeline ul {
-      background: #555F44;
-
-    }
+ .timeline {
+    background: #555F44;
+ }
 
     .timeline ul li {
       list-style-type: none;
