--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -82,10 +82,10 @@
     text-align: center;
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
-    font-size: clamp(55px, 2vw, 60px);
+    font-size: clamp(30px, 5vw, 60px);
     line-height: 35px;
     color: white;
-
+    padding-bottom: 30px;
  }
 
     .timeline ul li {
