--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -94,7 +94,7 @@
       width: 6px;
       margin: 0 auto;
       padding-top: 50px;
-      background: #fff;
+      background: #B9C86B;
     }
 
     .timeline ul li::after {
