--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -126,11 +126,11 @@
       border-style: solid;
     }
 
-    .timeline ul li:nth-child(odd) div {
+    .timeline ul li div {
       left: 45px;
     }
 
-    .timeline ul li:nth-child(odd) div::before {
+    .timeline ul li div::before {
       left: -15px;
       border-width: 8px 16px 8px 0;
       border-color: transparent #F45B69 transparent transparent;
