--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -92,7 +92,7 @@
       list-style-type: none;
       position: relative;
       width: 6px;
-      margin: 0 auto;
+      margin-left: 20%;
       padding-top: 50px;
       background: #B9C86B;
     }
