--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -101,7 +101,7 @@
       content: '';
       position: absolute;
       left: 50%;
-      bottom: 0;
+      top: 0;
       transform: translateX(-50%);
       width: 30px;
       height: 30px;
