--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -149,7 +149,8 @@
     }
 
     .timeline ul li.in-view::after {
-      background: #F45B69;
+      background: rgba(185, 200, 107, 0.5);
+      transform: rotate(90deg);
     }
 
     .timeline ul li div {
