--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -89,9 +89,9 @@
  }
 
  @-webkit-keyframes pulsate {
-     0% {-webkit-transform: scale(0.1, 0.1); opacity: 0;}
+     0% {-webkit-transform: scale(0.1, 0.1); opacity: 0;left:-11px;}
      50% {opacity: 1;}
-     100% {-webkit-transform: scale(1, 1); opacity: 1;}
+     100% {-webkit-transform: scale(1, 1); opacity: 1;left:-11px;}
  }
 
     .timeline ul li {
@@ -160,8 +160,7 @@
         background: #B9C86B;
         -webkit-animation: pulsate 1s ease-out;
         -webkit-animation-iteration-count: 20; 
-        opacity: 1.0
-      
+        opacity: 1.0;
     }
 
     .timeline ul li div {
