--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -7,64 +7,13 @@
   <ul>
     <li>
       <div>
-        <time>1999</time>
+        <time>Week</time>
           <img src="http://archive.codeforamerica.org/media/images/governments/oakland_seal.png" alt="overhead oakland picture" style"width: 150px; height: 125px;">
       was the year of our Lord in which I was born in the city of Oakland which lies in the state of California.
       </div> 
     
   
-    <li>
-      <div>
-        <time>2005</time>
-      was the year of our Lord in which I started my school career in the school of Franklin Elementary in Oakland.
-      </div> 
-      
-    <li>
-      <div>
-        <time>2005.1</time>
-      was the year of our Lord in which I fought and won my first of many brawls of my school career.
-      </div> 
-      
-    <li>
-      <div>
-        <time>2008</time>
-          <a href="https://www.google.com/maps/dir/Bayfair+Center,+East+14th+Street,+San+Leandro,+CA/Emeryville,+CA/@37.7760936,-122.2110006,12z/data=!4m14!4m13!1m5!1m1!1s0x808f91461591e1b3:0xf6773b4ef9082bd4!2m2!1d-122.1257777!2d37.7005884!1m5!1m1!1s0x80857e14ea1f8eb3:0x481d1831a8b07107!2m2!1d-122.2852473!2d37.831316!3e1">
-      was the year of our Lord in which I journeyed from Emeryville to Bayfair Center on bicycle.
-      </div> 
-      </a>
-    <li>
-      <div>
-        <time>2012</time>
-        <img src="http://freevector.co/wp-content/uploads/2014/06/60108-tombstone-of-halloween-with-a-cross-200x200.png" alt="rip picture" style"width: 150px; height: 125px;">
-      was the year of our Lord in which my dog of thirteen years died of old age.
-      </div> 
-      
-    <li>
-      <div>
-        <time>2013</time>
-          <img src="http://nebula.wsimg.com/d6e594a9e612ca3ac38ba85d5def865e?AccessKeyId=F010F6CA6E6FEC98B9E3&disposition=0&alloworigin=1" style="width:150px; height:125px">
-      was the year of our Lord in which I finished my 3 year football career with the Hayward Lancers.
-      </div> 
-      
-    <li>
-      <div>
-        <time>2015</time>
-          <img src="https://cdn.pcpartpicker.com/static/forever/images/product/7579bc42fbf72371a915dac28f4bc020.256p.jpg" alt="comp case" style"width:150px; height:125px;">
-      was the year of our Lord in which I built my first computer tower after 2 years of toiling.
-      </div> 
-    
-    <li>
-      <div>
-        <time>2016</time>
-      was the year of our Lord in where I first brought with the meat of the wild to my abode.
-      </div> 
-   
-    <li>
-      <div>
-        <time>2017</time>
-          <img src="http://www.uidownload.com/files/300/693/161/business-graduation-cap-icon.png" alt="grad hat" style"width:150px;height:125px;">
-      will be the year of our Lord in which I will graduate from High School.
-      </div>     
+  
   </ul>
 
   </div>
